--- a/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/fclaw_options.ini
@@ -1,17 +1,14 @@
 [user]
      period = 0.0
-     example = 3    
+     example = 4   
 
      cons-rp = F 
 
-     claw-version = 4
-
-
 [clawpatch]
      # Grid dimensions
-     mx = 32		      # mx_leaf
-     my = 32              # my_leaf
-     mbc = 2              # Number of ghost cells
+     mx = 1024	         # mx_leaf
+     my = 1024            # my_leaf
+     mbc = 2            # Number of ghost cells
      maux = 2
 
      # Equations and boundary conditions
@@ -37,22 +34,22 @@
      # --------------
      tfinal = 0.5         #  Final time
 
-     use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.001   # Initial time step for 'minlevel'
+     use_fixed_dt = T     # Take a fixed time step
+     initial_dt = 7.8125e-4    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     outstyle = 1         # OutputStyle = 1,2,3
+     outstyle = 3         # OutputStyle = 1,2,3
 
-     nout = 10            # Used for all three out styles;  has different meaning, though.
-     nstep = 1            # Only used if outstyle is 3
+     nout = 320     
+     nstep = 320            # Only used if outstyle is 3
 
      subcycle = T         # subcycle in time ( = T or F).
 
      # -------------------
      # File and console IO
      # -------------------
-     verbosity = essential     
+     verbosity = production    
      output = T
 
      # -----------
@@ -99,21 +96,6 @@
      mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
      use-fwaves = T
-
-     # output
-     ascii-out = T
-     vtk-out = F
-
-
-[clawpack5]
-     order  = 1 0         # normal and transverse order
-     mcapa = 0            # mcapa
-     maux = 2             # maux
-     src_term = 0         # src_term
-
-     mwaves = 1           # mwaves
-     mthlim = 3           # mthlim (is a vector in general, with 'mwaves' entries)
-     mthbc = 1 1 1 1      # mthbc (=left,right,bottom,top)
 
      # output
      ascii-out = T
