--- a/applications/clawpack/advection/2d/annulus/Makefile.am
+++ b/applications/clawpack/advection/2d/annulus/Makefile.am
@@ -18,20 +18,12 @@ applications_clawpack_advection_2d_annulus_annulus_SOURCES = \
 	applications/clawpack/advection/2d/all/clawpack5_rpn2adv_manifold.f90 \
 	applications/clawpack/advection/2d/all/clawpack5_rpt2adv_manifold.f90
 
-annulus_inifiles =	\
+applications_clawpack_advection_2d_annulus_annulus_EXTRA_DIST = \
 	applications/clawpack/advection/2d/annulus/fclaw_options.ini \
-	applications/clawpack/advection/2d/annulus/regression.ini
-
-annulus_graphics = \
+	applications/clawpack/advection/2d/annulus/regression.ini \
 	applications/clawpack/advection/2d/annulus/afterframe.m \
 	applications/clawpack/advection/2d/annulus/setplot2.m \
 	applications/clawpack/advection/2d/annulus/mapc2m.m
-
-applications_clawpack_advection_2d_annulus_annulus_SOURCES += \
-	$(annulus_inifiles) \
-	$(annulus_graphics)
-
-
 
 applications_clawpack_advection_2d_annulus_annulus_CPPFLAGS = \
         $(AM_CPPFLAGS) \
