--- a/applications/geoclaw/bowl_slosh/Makefile.am
+++ b/applications/geoclaw/bowl_slosh/Makefile.am
@@ -8,6 +8,16 @@ applications_geoclaw_bowl_slosh_slosh_SOURCES = \
 	applications/geoclaw/bowl_slosh/slosh.cpp \
 	applications/geoclaw/bowl_slosh/qinit.f90
 
+EXTRA_DIST += \
+	applications/geoclaw/bowl_slosh/fclaw_options.ini \
+	applications/geoclaw/bowl_slosh/make_data.py \
+	applications/geoclaw/bowl_slosh/make_plots.py \
+	applications/geoclaw/bowl_slosh/make_topo.py \
+	applications/geoclaw/bowl_slosh/afterframe.py \
+	applications/geoclaw/bowl_slosh/bathy.py \
+	applications/geoclaw/bowl_slosh/setplot2.py \
+	applications/geoclaw/bowl_slosh/wetcell.py \
+	applications/geoclaw/bowl_slosh/plot_region.py
 
 applications_geoclaw_bowl_slosh_slosh_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_GEOCLAW_CPPFLAGS)
