--- a/applications/clawpack/euler/2d/shockbubble/fclaw_options.ini
+++ b/applications/clawpack/euler/2d/shockbubble/fclaw_options.ini
@@ -55,9 +55,9 @@
      # -----------
      # Tikz output 
      # -----------
-     tikz-out = T
-     tikz-figsize = 4 1     # Each block is 1 in x 1 in ; Final figure is 4 in x 1 in
-     tikz-plot-fig = T      # Set to true if you have figure 'plot_0000.png' available.
+     tikz-out = F
+     tikz-figsize = 32 8     # Each block is 1 in x 1 in ; Final figure is 32 in x 8 in
+     tikz-mesh-only = T      # Set to false if you have figure 'plot_0000.png' available.
      tikz-plot-prefix = 'plot'
      tikz-plot-suffix = 'png'
 
