--- a/applications/geoclaw/bowl_radial/fclaw_options.ini
+++ b/applications/geoclaw/bowl_radial/fclaw_options.ini
@@ -27,7 +27,7 @@
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 1.2   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.65    # desired cfl
+     desired_cfl = 0.8    # desired cfl
 
      outstyle = 1         # 1 : Output steps  = tfinal/nout;
                           # 2 : not implemented;
@@ -50,7 +50,7 @@
      conservation-check = F
      run-user-diagnostics = T
      report-timing = T
-     report-timing-verbosity = summary
+     report-timing-verbosity = exclusive
 
 # Mapping
      manifold = F         # Manifold
