--- a/applications/clawpack/acoustics/2d/radial/Makefile.am
+++ b/applications/clawpack/acoustics/2d/radial/Makefile.am
@@ -5,6 +5,7 @@ bin_PROGRAMS += applications/clawpack/acoustics/2d/radial/radial
 applications_clawpack_acoustics_2d_radial_radial_SOURCES = \
 	applications/clawpack/acoustics/2d/radial/radial.cpp \
 	applications/clawpack/acoustics/2d/radial/radial_user.cpp \
+	applications/clawpack/acoustics/2d/radial/radial_options.c \
 	applications/clawpack/acoustics/2d/radial/radial_user.h \
 	applications/clawpack/acoustics/2d/radial/fclaw2d_map_pillowdisk5.c \
 	applications/clawpack/acoustics/2d/radial/setprob.f \
