--- a/applications/clawpack/advection/2d/swirl_cons/example3.ini
+++ b/applications/clawpack/advection/2d/swirl_cons/example3.ini
@@ -23,8 +23,8 @@
     # Dynamic gridding parameters     
     # ---------------------------
 
-    minlevel = 2         # Minimum level
-    maxlevel = 3        # Maximum levels of refinement
+    minlevel = 1         # Minimum level
+    maxlevel = 2        # Maximum levels of refinement
 
     regrid_interval = 0  # Regrid every 'regrid_interval' time steps.
     refine_threshold = 0.5
@@ -39,13 +39,13 @@
     tfinal = 0.01         #  Final time (Ex 1 : 0.4;   Ex 2 : 0.3)
 
     use_fixed_dt = T     # Take a fixed time step
-    initial_dt = 2e-2   # Initial time step for 'minlevel'
+    initial_dt = 0.0625   # Initial time step for 'minlevel'
     max_cfl = 1.0        # maximum cfl
-    desired_cfl = 0.9    # desired cfl
+    desired_cfl = 1.0    # desired cfl
 
     outstyle = 3         # OutputStyle = 1,2,3
 
-    nout  = 20          # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
+    nout  = 10          # Number of output steps (Ex 1 : 15;  Ex 2 : 30)
     nstep = 1            # Only used if outstyle is 3
 
     subcycle = T         # subcycle in time ( = T or F).
